--- a/client/reg.html
+++ b/client/reg.html
@@ -16,6 +16,12 @@
         <button>Create user</button>
     </div>
 
+    <p class="id_p"></p>
+    <p class="username_p"></p>
+    <p class="email_p"></p>
+    <p class="phone_p"></p>
+    <p class="pwd_p"></p>
+
     <script src="./reg.js"></script>
 </body>
 </html>
